fix: adjust spacing between featured image and blog contents

--- a/src/styles/pages/_blog-post.scss
+++ b/src/styles/pages/_blog-post.scss
@@ -14,7 +14,7 @@
   /* -------- */
 
   .blog-post {
-    padding: 3em 1em 0;
+    padding: 2em 1em 0;
 
     p {
       line-height: 1.75 * $base-line-height;
